Fixing scholastica spelling and left justify text on wrap

--- a/subsection.css
+++ b/subsection.css
@@ -30,6 +30,7 @@ subsection company {
 subsection company name {
     font-family: 'Nova Flat', cursive;
     font-weight: bold;
+    text-align: right;
 }
 
 subsection company location {
